[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Jay/Jay_walking.png" type="Texture" id=1]
[ext_resource path="res://Jay/Jay.gd" type="Script" id=2]
[ext_resource path="res://Assets/Jay/jay_reload.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 150, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 50, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 100, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 150, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 50, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Reload",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 11.0454

[sub_resource type="CircleShape2D" id=20]
radius = 236.62

[node name="Jay" type="KinematicBody2D" groups=["Collision", "Player"]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 4 )
animation = "Reload"
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="end_of_gun" type="Position2D" parent="."]
position = Vector2( 18, 5 )

[node name="Reload" type="Timer" parent="."]
wait_time = 1.25

[node name="shootRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootRadius"]
scale = Vector2( 1.00312, 1 )
shape = SubResource( 20 )

[node name="ROF" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="body_entered" from="shootRadius" to="." method="_on_shootRadius_body_entered"]
[connection signal="body_exited" from="shootRadius" to="." method="_on_shootRadius_body_exited"]
[connection signal="timeout" from="ROF" to="." method="_on_ROF_timeout"]
